# divide-and-conquer-analysis

./: .gitignore  ANALYSIS.md  LICENSE  README.md  pyproject.toml
results/: bench_results.csv  summary.json
scripts/: run_benchmarks.sh
src/: __init__.py
src/algorithms/: __init__.py  merge_sort.py  quick_sort.py
src/bench/: benchmark.py  datasets.py  logging_setup.py  metrics.py
tests/: __init__.py  test_sorts.py
