[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms-week2"
version = "0.1.0"
description = "Divide-and-conquer sorting algorithms benchmark"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "psutil>=5.8.0",
    "matplotlib>=3.5.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=0.950",
    "ruff>=0.0.200",
    "black>=22.0.0",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

